# nf-interpreter

CMake/Modules/: FindFreeRTOS.cmake  FreeRTOS_XILINX_xx_GCC_options.cmake  FreeRTOS_XILINX_xx_sources.cmake
targets/FreeRTOS/: CMakeLists.txt
targets/FreeRTOS/XILINX_SOFTCORE_ARM/: CMakeLists.txt
targets/FreeRTOS/XILINX_SOFTCORE_ARM/XILINX_ARTY_A7/: CMakeLists.txt  FreeRTOSConfig.h  Target_Windows_Storage.h  cmake-variants.json  target_windows_devices_serialcommunication_config.cpp
targets/FreeRTOS/XILINX_SOFTCORE_ARM/XILINX_ARTY_A7/nanoBooter/: main.c
targets/FreeRTOS/XILINX_SOFTCORE_ARM/_bsp/: CMakeLists.txt
targets/FreeRTOS/XILINX_SOFTCORE_ARM/_bsp/include/: bspconfig.h  xparameters.h
